2001-12-12  Paolo Maggi  <maggi@athena.polito.it>

	* TODO: update

2001-12-11  James Willcox  <jwillcox@cs.indiana.edu>

	* Makefile.am:  fixed GConf schema installation

2001-12-10  James Willcox  <jwillcox@cs.indiana.edu>

	* gedit.schemas:  New file -- GConf schema, used for preferences.

	* Makefile.am:  Added stuff to install the GConf schema

2001-12-10  Paolo Maggi  <maggi@athena.polito.it>

	* TODO : updated

2001-12-09  Paolo Maggi  <maggi@athena.polito.it>

	* TODO : updated

	* BUGS: updated

	* configure.in: bump version to 1.108.0

2001-12-05  Chema Celorio  <chema@celorio.com>

	* configure.in: bump version to 1.107.0

2001-12-03  Carlos Perelló Marín <carlos@gnome-db.org>

        * configure.in: Reverted my change about GETTEXT_PACKAGE. We should
	use the "standar" name (gedit-2.0 instead of gedit-2).

2001-12-03  Paolo Maggi  <maggi@athena.polito.it>

	* TODO : updated

2001-12-02  Paolo Maggi  <maggi@athena.polito.it>

	* configure.in: cleaned following the suggestions of the gnome2
	  porting foc. Now libgnomeprintui-2.0 is required 

2001-11-21  Carlos Perelló Marín <carlos@gnome-db.org>

        * configure.in: Changed GETTEXT_PACKAGE from gedit-2.0 to gedit-2
	
2001-11-16  Carlos Perelló Marín <carlos@gnome-db.org>

	* Makefile.am, configure.in: Migrated from xml-i18n-tools to intltool
	and added support to AM_GLIB_GNU_GETTEXT
	* acconfig.h: Added GETTEXT_PACKAGE

2001-11-16  Paolo Maggi   <maggi@athena.polito.it>

	* Started the port to GNOME 2.0

2001-11-16  Carlos Perelló Marín <carlos@gnome-db.org>

	* ChangeLog: rolled over to ChangeLog-20011116.