@@ -68,6 +68,8 @@ fi
 
 AC_SUBST(pixmapsdir)
 
+AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)
+
 AC_OUTPUT([
 Makefile
 po/Makefile.in
