@@ -6,6 +6,8 @@ hello-plugin
 reverse-plugin
 encrypt-plugin
 decrypt-plugin
+gedit-marshal.c
+gedit-marshal.h
 Makefile
 Makefile.in
 .libs
