@@ -1,3 +1,10 @@
+2001-12-14  Gediminas Paulauskas <menesis@delfi.lt>
+
+	* gedit-marshal.list: added this file with one marshaller, which
+	previously was in libgnome.
+	* Makefile.am: generate, use, and dist gedit-marshal.*
+	* bonobo-mdi.c: replace gnome_marshal with gedit_marshal
+
 2001-12-12  Paolo Maggi  <maggi@athena.polito.it>
 
 	* gedit-commands.c (TO_BE_IMPLEMENTED: set OK button as default 
