@@ -1,3 +1,7 @@
+2001-12-14  Gediminas Paulauskas <menesis@delfi.lt>
+
+	* configure.in: add check for glib-genmarshal
+
 2001-12-12  Paolo Maggi  <maggi@athena.polito.it>
 
 	* TODO: update
